# DriveNetBench

./: .gitignore  .pre-commit-config.yaml  GOODENOUGH.py  LICENSE  Makefile  README.md  YoloDetection.py  asdfsad.txt  config.yaml  config_new.yaml  driver_1_robot_path.npy  driver_2_robot_path.npy  driver_3_robot_path.npy  driver_4_robot_path.npy  environment.yml  index.html  prompt.md  pyproject.toml  requirements.txt  robot_path.npy  setup.py  test.npy  tmp.py  tmp2.py
.github/: FUNDING.yml
assets/: DriveNetBench Diagram.drawio  architecture_diagram.drawio
drivenetbench/: GOODENOUGH.py  benchmarker.py  detector.py  final.py  final2.py  final3.py  geometry_definer.py  keypoints_definer.py  main.py  main_from_roberto.py  similarity_calculator.py  track_manager.py  view_transformer.py
drivenetbench/apps/: cli.py
drivenetbench/scripts/: frame_extractor.py  middle_finder copy.py  middle_finder.py
drivenetbench/utilities/: config.py  track_processor.py  utils.py
keypoints/: all_path.npy  old_keypoints_from_camera.npy  old_keypoints_from_digital.npy  pos2_keypoints_from_camera.npy  pos3_keypoints_from_camera.npy
keypoints/new_track/: all_path.npy  all_path.txt  all_path_offset.npy  center_path.npy  keypoints_from_camera.npy  keypoints_from_diagram.npy  offset_path.npy
notebooks/: calculate_transformation_error.ipynb
results/driver_4/: results.toml  robot_path.npy
