[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
  | \.vscode
  | \.*.egg-info
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.poetry]
name = "drivenetbench"
version = "0.1.0"
description = ""
authors = ["Ali Albustami <abustami@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.20"
opencv-python = "^4.11.0.86"
pyyaml = "^6.0.2"
pre-commit = "3.5.0"
isort = "5.13.2"
black = "24.8.0"
flake8 = "^7.1.2"
typer = "^0.15.1"
tk-tools = "0.16.0"
pillow = "10.4.0"
supervision = "^0.25.1"
torch = "2.4.1"
ultralytics = "8.3.76"
scikit-learn = "1.3.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
